// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen renders build environment next to version # if ENV is dev 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-end",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </CustomModalComponent>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "width": "100%",
        }
      }
    >
      <IconButton
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        icon={
          <mockConstructor
            color="#9e9e9e"
            name="close"
            size={16}
          />
        }
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "height": 30,
          }
        }
        type={3}
        width={-1}
      />
    </View>
    <Text
      style={
        Object {
          "paddingBottom": 20,
        }
      }
    >
      Please select a country to sign into
    </Text>
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
        }
      }
    >
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "paddingHorizontal": 12,
            "width": "50%",
          }
        }
        title="MX"
        titleColor="#0071e9"
        titleFontSize={16}
        titleFontWeight="normal"
        type={2}
        width={-1}
      />
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "paddingHorizontal": 12,
            "width": "50%",
          }
        }
        title="CN"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </CustomModalComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "height": 40,
          "width": "85%",
        }
      }
      title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#9e9e9e",
        "marginBottom": 20,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    [missing "en.GENERICS.VERSION" translation] 1.1.0-DEV
  </Text>
</View>
`;

exports[`LoginScreen renders build environment next to version # if ENV is stage 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-end",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </CustomModalComponent>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "width": "100%",
        }
      }
    >
      <IconButton
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        icon={
          <mockConstructor
            color="#9e9e9e"
            name="close"
            size={16}
          />
        }
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "height": 30,
          }
        }
        type={3}
        width={-1}
      />
    </View>
    <Text
      style={
        Object {
          "paddingBottom": 20,
        }
      }
    >
      Please select a country to sign into
    </Text>
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
        }
      }
    >
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "paddingHorizontal": 12,
            "width": "50%",
          }
        }
        title="MX"
        titleColor="#0071e9"
        titleFontSize={16}
        titleFontWeight="normal"
        type={2}
        width={-1}
      />
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "paddingHorizontal": 12,
            "width": "50%",
          }
        }
        title="CN"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </CustomModalComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "height": 40,
          "width": "85%",
        }
      }
      title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#9e9e9e",
        "marginBottom": 20,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    [missing "en.GENERICS.VERSION" translation] 1.1.0-STAGE
  </Text>
</View>
`;

exports[`LoginScreen renders pure version number if build environment is production 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-end",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </CustomModalComponent>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "width": "100%",
        }
      }
    >
      <IconButton
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        icon={
          <mockConstructor
            color="#9e9e9e"
            name="close"
            size={16}
          />
        }
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "height": 30,
          }
        }
        type={3}
        width={-1}
      />
    </View>
    <Text
      style={
        Object {
          "paddingBottom": 20,
        }
      }
    >
      Please select a country to sign into
    </Text>
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
        }
      }
    >
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "paddingHorizontal": 12,
            "width": "50%",
          }
        }
        title="MX"
        titleColor="#0071e9"
        titleFontSize={16}
        titleFontWeight="normal"
        type={2}
        width={-1}
      />
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "paddingHorizontal": 12,
            "width": "50%",
          }
        }
        title="CN"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </CustomModalComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "height": 40,
          "width": "85%",
        }
      }
      title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#9e9e9e",
        "marginBottom": 20,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    [missing "en.GENERICS.VERSION" translation] 1.1.0
  </Text>
</View>
`;

exports[`LoginScreen renders the EnterClubNbr modal when a user logs in without a club number 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-end",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={true}
    modalType="Form"
    onClose={[Function]}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </CustomModalComponent>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "width": "100%",
        }
      }
    >
      <IconButton
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        icon={
          <mockConstructor
            color="#9e9e9e"
            name="close"
            size={16}
          />
        }
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "height": 30,
          }
        }
        type={3}
        width={-1}
      />
    </View>
    <Text
      style={
        Object {
          "paddingBottom": 20,
        }
      }
    >
      Please select a country to sign into
    </Text>
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
        }
      }
    >
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "paddingHorizontal": 12,
            "width": "50%",
          }
        }
        title="MX"
        titleColor="#0071e9"
        titleFontSize={16}
        titleFontWeight="normal"
        type={2}
        width={-1}
      />
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "paddingHorizontal": 12,
            "width": "50%",
          }
        }
        title="CN"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </CustomModalComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "height": 40,
          "width": "85%",
        }
      }
      title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#9e9e9e",
        "marginBottom": 20,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    [missing "en.GENERICS.VERSION" translation] 1.1.0- DEV
  </Text>
</View>
`;

exports[`LoginScreen renders the snapshot test appropriately 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-end",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </CustomModalComponent>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "width": "100%",
        }
      }
    >
      <IconButton
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        icon={
          <mockConstructor
            color="#9e9e9e"
            name="close"
            size={16}
          />
        }
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "height": 30,
          }
        }
        type={3}
        width={-1}
      />
    </View>
    <Text
      style={
        Object {
          "paddingBottom": 20,
        }
      }
    >
      Please select a country to sign into
    </Text>
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
        }
      }
    >
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "paddingHorizontal": 12,
            "width": "50%",
          }
        }
        title="MX"
        titleColor="#0071e9"
        titleFontSize={16}
        titleFontWeight="normal"
        type={2}
        width={-1}
      />
      <Button
        backgroundColor="#0071e9"
        disabled={false}
        height={45}
        onPress={[Function]}
        radius={5}
        style={
          Object {
            "paddingHorizontal": 12,
            "width": "50%",
          }
        }
        title="CN"
        titleColor="#ffffffff"
        titleFontSize={16}
        titleFontWeight="normal"
        type={1}
        width={-1}
      />
    </View>
  </CustomModalComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "height": 40,
          "width": "85%",
        }
      }
      title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#9e9e9e",
        "marginBottom": 20,
        "textAlign": "center",
        "width": "100%",
      }
    }
  >
    [missing "en.GENERICS.VERSION" translation] 1.1.0- DEV
  </Text>
</View>
`;
